--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>gn-math</h1>
+    <input type="text" id="searchBar" placeholder="Search zones..." onkeyup="filterZones()">
     <div id="container">Loading...</div>
     <div id="zoneViewer">
         <div id="controls">
