--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="controls">
             <button onclick="closeZone()">Close</button>
             <button onclick="fullscreenZone()">Fullscreen</button>
+            <button onclick="aboutBlank()">about:blank</button>
         </div>
         <iframe id="zoneFrame"></iframe>
     </div>
