--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <input type="text" id="searchBar" placeholder="Search zones..." onkeyup="filterZones()">
     <div id="container">Loading...</div>
     <div id="zoneViewer">
+        <div id="zoneInfo">
+            <span id="zoneName"></span> <span id="zoneId"></span>
+        </div>
         <div id="controls">
             <button onclick="closeZone()">Close</button>
             <button onclick="fullscreenZone()">Fullscreen</button>
