--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div id="zoneViewer">
         <div id="zoneInfo">
             <span id="zoneName"></span> <span id="zoneId"></span>
-        </div>
-        <div id="controls">
-            <button onclick="closeZone()">Close</button>
-            <button onclick="fullscreenZone()">Fullscreen</button>
-            <button onclick="aboutBlank()">about:blank</button>
+            <div id="controls">
+                <button onclick="closeZone()">Close</button>
+                <button onclick="fullscreenZone()">Fullscreen</button>
+                <button onclick="aboutBlank()">about:blank (use if embed is broken)</button>
+            </div>
         </div>
         <iframe id="zoneFrame"></iframe>
     </div>
