--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div id="container">Loading...</div>
     <div id="zoneViewer">
         <div id="zoneInfo">
-            <span id="zoneName"></span> <span id="zoneId"></span>
+            <div id="zoneTitle">
+                <span id="zoneName"></span> <span id="zoneId"></span>
+            </div>
             <div id="controls">
                 <button onclick="closeZone()">Close</button>
                 <button onclick="fullscreenZone()">Fullscreen</button>
