--- a/singlefile.html
+++ b/singlefile.html
@@ -147,8 +147,8 @@
         const zoneViewer = document.getElementById('zoneViewer');
         const zoneFrame = document.getElementById('zoneFrame');
         const searchBar = document.getElementById('searchBar');
-        const zonesURL = "https://cdn.jsdelivr.net/gh/gn-math/assets@main/zones.json";
-        const assetURL = "https://cdn.jsdelivr.net/gh/gn-math/assets@main";
+        const zonesURL = "https://cdn.jsdelivr.net/gh/gn-math/assets/zones.json";
+        const assetURL = "https://cdn.jsdelivr.net/gh/gn-math/assets";
         let zones = [];
         async function listZones() {
             try {
