--- a/singlefile.html
+++ b/singlefile.html
@@ -152,7 +152,7 @@
         let zones = [];
         async function listZones() {
             try {
-                const response = await fetch(zonesURL);
+                const response = await fetch(zonesURL + "?=" + Date.now());
                 const json = await response.json();
                 zones = json.sort((a, b) => a.name.localeCompare(b.name));
                 displayZones(zones);
