--- a/singlefile.html
+++ b/singlefile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gn-math</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/style.css">
 </head>
 <body>
     <h1>gn-math</h1>
@@ -23,6 +23,6 @@
         </div>
         <iframe id="zoneFrame"></iframe>
     </div>
-    <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/script.js"></script>
 </body>
 </html>
