--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <body>
     <h1>gn-math</h1>
     <input type="text" id="searchBar" placeholder="Search zones..." onkeyup="filterZones()">
+    <div id="dataButtons">
+        <button onclick="saveData()">Save Data</button>
+        <input type="file" onchange="loadData(event)">
+    </div>
+    <select id="sortOptions" onchange="sortZones()">
+        <option value="name">by Name</option>
+        <option value="id">by Id</option>
+        <option value="popular">by Popularity</option>
+    </select>
     <div id="container">Loading...</div>
     <div id="zoneViewer">
         <div id="zoneInfo">
