--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="text" id="searchBar" placeholder="Search zones..." onkeyup="filterZones()">
     <div id="dataButtons">
         <button onclick="saveData()">Save Data</button>
-        <input type="file" onchange="loadData(event)">
+        <input type="file" onchange="loadData(event)">Load Data</input>
     </div>
     <select id="sortOptions" onchange="sortZones()">
         <option value="name">by Name</option>
