--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <input type="file" id="file" style="display:none" onchange="loadData(event)" />
         </div>
         <select id="sortOptions" onchange="sortZones()">
-            <option value="name">by Name</option>
-            <option value="id">by Id</option>
-            <option value="popular">by Popular</option>
+            <option value="name">by Nameㅤ</option>
+            <option value="id">by Idㅤ</option>
+            <option value="popular">by Popularityㅤ</option>
         </select>
     </div>
     <div id="container">Loading...</div>
