--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="dark-mode">
     <h1>gn-math</h1>
     <input type="text" id="searchBar" placeholder="Search zones..." onkeyup="filterZones()">
     <div id="topControls">
@@ -37,6 +37,7 @@
         </div>
         <iframe id="zoneFrame"></iframe>
     </div>
+    <button id="darkModeToggle">Toggle Dark Mode</button>
     <script src="script.js"></script>
 </body>
 
