--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="https://cdn.jsdelivr.net/gh/The-3Labs-Team/js-anti-adblock@main/dist/antiAdBlocker.min.ob.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gn-math</title>
@@ -10,6 +11,9 @@
 
 <body class="dark-mode">
     <h1>gn-math</h1>
+    <div style="width:100%; display:flex; justify-content:center; margin-bottom:10px;">
+        <iframe src="https://democratmachinesucceed.com/km9dvd7fp?key=51c9dd135146d5d93f5886779fc2b354" style="width:90%; height:90px; border:none;"></iframe>
+    </div>
     <input type="text" id="searchBar" placeholder="Search zones..." onkeyup="filterZones()">
     <div id="topControls">
         <div id="dataButtons">
@@ -39,6 +43,9 @@
     </div>
     <button id="darkModeToggle">Toggle Dark Mode</button>
     <script src="script.js"></script>
+    <div style="width:100%; display:flex; justify-content:center; margin-bottom:10px;">
+        <iframe src="https://democratmachinesucceed.com/km9dvd7fp?key=51c9dd135146d5d93f5886779fc2b354" style="width:90%; height:90px; border:none;"></iframe>
+    </div>
 </body>
 
 </html>
