zone loaded count

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <iframe src="https://democratmachinesucceed.com/km9dvd7fp?key=51c9dd135146d5d93f5886779fc2b354" style="width:90%; height:90px; border:none;"></iframe>
     </div>
     <input type="text" id="searchBar" placeholder="Search zones..." onkeyup="filterZones()">
-    <div id="topControls">
+    <div id="topControls"> 
         <div id="dataButtons">
             <button onclick="saveData()">Save Data</button>
             <button onclick="document.getElementById('file').click()">Load Data</button>
@@ -29,6 +29,7 @@
             <option value="popular">by Popularityㅤ</option>
         </select>
     </div>
+    <div id="zoneCount"></div>
     <div id="container">Loading...</div>
     <div id="zoneViewer">
         <div id="zoneInfo">
