add formatting to zone

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
             <option value="popular">by Popularityㅤ</option>
         </select>
     </div>
-    <div id="zoneCount"></div>
-    <div id="container">Loading...</div>
+    <div class="zone-wrapper">
+        <div id="zoneCount" class="zone-count"></div>
+        <div id="container">Loading...</div>
+    </div>      
     <div id="zoneViewer">
         <div id="zoneInfo">
             <div id="zoneTitle">
