--- a/singlefile.html
+++ b/singlefile.html
@@ -259,6 +259,18 @@
             border-color: #ddd;
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
         }
+
+        .zone-wrapper {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        .zone-count {
+            text-align: center;
+            font-size: 18px;
+            margin-bottom: 10px;
+            color: var(--text-color, #ffffff);
+        }
     </style>
 </head>
 
@@ -280,8 +292,10 @@
             <option value="popular">by Popularityㅤ</option>
         </select>
     </div>
-    <div id="zoneCount"></div>
-    <div id="container">Loading...</div>
+    <div class="zone-wrapper">
+        <div id="zoneCount" class="zone-count"></div>
+        <div id="container">Loading...</div>
+    </div>      
     <div id="zoneViewer">
         <div id="zoneInfo">
             <div id="zoneTitle">
